start updating CHANGELOG for new stuff in 0.2.0
git-svn-id: https://mapnik-utils.googlecode.com/svn/trunk/serverside/cascadenik@1033 dbea3d40-3153-0410-b551-57805770c6e6

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,22 @@ Cascadenik Changelog
 --------------------
 
 
+Version 0.2.0, August _, 2010:
+----------------------------
+ 
+ * Packaged from r___
+ 
+ * Re-implemented support for installing dependencies via Setuptools, if available
+ 
+ * Refactored handling of file-based resources
+ 
+ * Added preliminary support for writing XML compliant against different Mapnik versions
+ 
+ * Added support for caching (avoiding re-downloading) remote resources (initial patch from tmcw)
+ 
+ * Exposed the variety of new options as command line flags for cascadenik-compile.py
+ 
+
 Version 0.1.0, May 1, 2010:
 ---------------------------
 
