add support for local, zipped shapefiles, improve debug output
git-svn-id: https://mapnik-utils.googlecode.com/svn/trunk/serverside/cascadenik@1034 dbea3d40-3153-0410-b551-57805770c6e6

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,8 @@ Version 0.2.0, August _, 2010:
  
  * Packaged from r___
  
+ * Added support for zipped shapefiles that are local to the filesystem.
+ 
  * Re-implemented support for installing dependencies via Setuptools, if available
  
  * Refactored handling of file-based resources
