+ support for MarkersSymbolizer, RasterSymbolizer, and MetaWriters
git-svn-id: https://mapnik-utils.googlecode.com/svn/trunk/serverside/cascadenik@1036 dbea3d40-3153-0410-b551-57805770c6e6

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,7 +6,12 @@ Version 0.2.0, August _, 2010:
 ----------------------------
  
  * Packaged from r___
- 
+
+ * Added support for MarkersSymbolizer, RasterSymbolizer, and MetaWriters
+     - http://trac.mapnik.org/wiki/MarkersSymbolizer
+     - http://trac.mapnik.org/wiki/MetaWriter
+     - http://trac.mapnik.org/wiki/RasterSymbolizer
+
  * Added support for zipped shapefiles that are local to the filesystem.
  
  * Re-implemented support for installing dependencies via Setuptools, if available
