add support for pulling remote file-based datasources like single geojson, kml, or sqlite files to be read with the ogr driver. comment out unfinished work on handling local shapefiles that are not zipped
git-svn-id: https://mapnik-utils.googlecode.com/svn/trunk/serverside/cascadenik@1044 dbea3d40-3153-0410-b551-57805770c6e6

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,8 @@ Version 0.2.0, August _, 2010:
  
  * Packaged from r___
 
+ * Added support for handling remote, single file-based datasources other than zipped shapefiles
+ 
  * Added support for MarkersSymbolizer, RasterSymbolizer, and MetaWriters
      - http://trac.mapnik.org/wiki/MarkersSymbolizer
      - http://trac.mapnik.org/wiki/MetaWriter
