hotosm cholera/kiosk mapping needs > z18 (patch from mattmakesmaps) [also fixed olt's name in AUTHORS]

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -4,6 +4,7 @@ Written by Michal Migurski.
 With contributions from:
 
 Aubrey Holland
+Matt Kenny
 Tom MacWright
-oltonn
 Dane Springmeyer
+Oliver Tonnhofer
